@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-2805: Load distinct brightcove player in amp pages
 
+- MAINT: Make solr timeout configurable
+
 
 2.55 (2016-02-09)
 -----------------
